--- a/Booking/app/views/App/Index.html
+++ b/Booking/app/views/App/Index.html
@@ -14,6 +14,22 @@
   <div class="row">
     <div class="span6">
       {{template "flash.html" .}}
+
+      <form action="/App/Hello" method="GET">
+        <div style="width:300px">
+          <div>Name
+            {{with $field := field "name" .}}
+              <input style="float: right" type="text" name="{{$field.Name}}" value="{{$field.Flash}}" />
+            {{end}}
+          </div><br/>
+          <div>Password
+            {{with $field := field "pass" .}}
+              <input style="float: right" type="text" name="{{$field.Name}}" value="{{$field.Flash}}" />
+            {{end}}
+          </div><br/>
+        </div>
+        <input style="clear: both" type="submit" value="Create User" />
+      </form>
     </div>
   </div>
 </div>
