--- a/Booking/app/views/App/Index.html
+++ b/Booking/app/views/App/Index.html
@@ -1,7 +1,7 @@
 {{set . "title" "Home"}}
 {{template "header.html" .}}
 
-<header class="jumbotron" style="background-color:#A9F16C">
+<header class="jumbotron" style="background-color:#7dedc6">
   <div class="container">
     <div class="row">
       <h1>It works!</h1>
