--- a/Booking/app/views/App/Register.html
+++ b/Booking/app/views/App/Register.html
@@ -4,7 +4,7 @@
 <header class="jumbotron" style="background-color:#7dedc6">
   <div class="container">
     <div class="row">
-      <h1>It works!</h1>
+      <h1>Register</h1>
       <p></p>
     </div>
   </div>
