add home page after login

--- a/Booking/app/views/App/Register.html
+++ b/Booking/app/views/App/Register.html
@@ -1,4 +1,4 @@
-{{set . "title" "Home"}}
+{{set . "title" "Register"}}
 {{template "header.html" .}}
 
 <header class="jumbotron" style="background-color:#7dedc6">
