--- a/Booking/app/views/App/Index.html
+++ b/Booking/app/views/App/Index.html
@@ -1,4 +1,4 @@
-{{set . "title" "Home"}}
+{{set . "title" "Login"}}
 {{template "header.html" .}}
 
 <header class="jumbotron" style="background-color:#7dedc6">
